--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "yannoff/lumiere",
     "description": "A set of utils & helpers for Laravel",
-    "keywords": ["laravel, laravel framework, lumen, illuminate"],
+    "keywords": ["laravel", "laravel framework", "lumen", "illuminate"],
     "type": "library",
     "license": "MIT",
     "authors": [{
