[composer] Add `illuminate/database` dev package

--- a/composer.json
+++ b/composer.json
@@ -17,5 +17,8 @@
     "prefer-stable": true,
     "require": {
         "php": ">=7.0"
+    },
+    "require-dev": {
+        "illuminate/database": "*"
     }
 }
