[BluePrint\Utils] Change root namespace & FQCN
- Move: `Database\BluePrint\Utils` => `Utils\Database\BluePrintUtils`
- Add BC support & deprecation warning for `Database\BluePrint\Utils`

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     }],
     "autoload": {
         "psr-4": {
-            "Yannoff\\Lumiere\\": "src/"
+            "Yannoff\\Lumiere\\Utils\\": "src/",
+            "Yannoff\\Lumiere\\Database\\": "lib/Database/"
         }
     },
     "minimum-stability": "dev",
